add additional routes, and routes to hamburger links

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,9 +21,23 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "src/app/header/header.component.scss",
+      "imports": [
+        "src/app/header/hamburger.scss"
+      ]
+    },
+    {
+      "path": "src/app/home/home.component.scss",
+      "imports": [
+        "src/app/header/header.component.scss",
+        "src/app/header/hamburger.scss"
+      ]
+    }
+  ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
