remove hamburger.css, add amenities page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,7 +2,12 @@
   "name": "freelance-co-working",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "src/app/header/header.component.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "src",
@@ -31,8 +36,7 @@
     {
       "path": "src/app/home/home.component.scss",
       "imports": [
-        "src/app/header/header.component.scss",
-        "src/app/header/hamburger.scss"
+        "src/app/header/header.component.scss"
       ]
     }
   ],
