update to pre-pos app config

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,13 @@
       "imports": [
         "src/app/header/header.component.scss"
       ]
+    },
+    {
+      "path": "src/app/plans/plans.component.scss",
+      "imports": [
+        "src/app/home/home.component.scss",
+        "src/app/header/header.component.scss"
+      ]
     }
   ],
   "projectView": {
