used nesting and mixins to make code DRY

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,13 +6,18 @@
     {
       "path": "src/app/header/header.component.scss",
       "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "src/app/home/home.component.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "src",
       "src/app",
-      "src/app/header"
+      "src/app/header",
+      "src/app/home"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -42,8 +47,7 @@
     {
       "path": "src/app/plans/plans.component.scss",
       "imports": [
-        "src/app/home/home.component.scss",
-        "src/app/header/header.component.scss"
+        "src/app/home/home.component.scss"
       ]
     }
   ],
